--- a/src/css/Main.css
+++ b/src/css/Main.css
@@ -9,10 +9,10 @@ input {
 }
 
 body {
-  background-color: #4575bd;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
   font-size: 1rem;
   font-family: 'Chivo', sans-serif;
-  padding-top: 80px;
 }
 
 a, a:hover, a:focus, a:visited, a:active {
@@ -85,6 +85,10 @@ h3 {
   background-color: #2c3e50;
 }
 
+.bg-white {
+  background-color: #fff;
+}
+
 .cl-primary {
   color: #4575bd;
 }
@@ -99,6 +103,25 @@ h3 {
 
 .cl-white {
   color: #fff;
+}
+
+.loader {
+  -webkit-transition: all .6s;
+  transition: all .6s;
+  width: 100%;
+  height: 100vh;
+  top: 0;
+  position: absolute;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: rgba(0, 0, 0, 0.4);
 }
 
 .btn {
@@ -143,9 +166,6 @@ h3 {
 nav {
   height: 50px;
   padding: 15px;
-  -webkit-box-shadow: 0px 0px 5px 0px rgba(255, 255, 255, 0.75);
-  box-shadow: 0px 0px 5px 0px rgba(255, 255, 255, 0.75);
-  background-color: rgba(69, 117, 189, 0.4);
   position: fixed;
   top: 0;
   width: 100%;
@@ -153,6 +173,32 @@ nav {
 
 nav img {
   width: 40px;
+}
+
+.menu-item {
+  font-weight: 600;
+  color: #fff;
+  -webkit-transition: all .3s;
+  transition: all .3s;
+}
+
+.menu-item:hover {
+  color: #2c3e50;
+  background-color: #fff;
+}
+
+.menu {
+  background-color: #4575bd;
+  color: #fff;
+}
+
+.local-info {
+  border-bottom: 2px solid #4575bd;
+}
+
+.username {
+  border-bottom: 2px solid #fff;
+  font-weight: 700;
 }
 
 /*  -----------------------------------------------
@@ -164,10 +210,17 @@ nav img {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+}
+
+.login h1 {
+  margin-top: 30px;
 }
 
 .login .login-form {
-  min-height: calc(100vh - 130px);
+  min-height: 100vh;
+  background-color: #4575bd;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -179,5 +232,24 @@ nav img {
           justify-content: center;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+}
+
+/*  -----------------------------------------------
+    DASHBOARD
+    ----------------------------------------------- */
+.dashboard .menu {
+  width: 30%;
+}
+
+.dashboard .main-content {
+  width: 70%;
+}
+
+.dashboard .local-info {
+  color: #2c3e50;
+}
+
+.dashboard .local-info h4 {
+  text-transform: uppercase;
 }
 /*# sourceMappingURL=Main.css.map */
