--- a/src/css/Main.scss
+++ b/src/css/Main.scss
@@ -16,10 +16,12 @@ input {
 }
 
 body {
-    background-color: $primary;
+    //background-color: $primary;
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
     font-size: 1rem;
     font-family: 'Chivo', sans-serif;
-    padding-top: 80px;
+    //padding-top: 80px;
 }
 
 a, a:hover, a:focus, a:visited, a:active {
@@ -91,6 +93,10 @@ h3 {
     background-color: $blue;
 }
 
+.bg-white {
+    background-color: #fff;
+}
+
 .cl-primary {
     color: $primary;
 }
@@ -105,6 +111,18 @@ h3 {
 
 .cl-white {
     color: #fff;
+}
+
+.loader {
+    transition: all .6s;
+    width: 100%;
+    height: 100vh;
+    top: 0;
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(0,0,0,.4);
 }
 
 // Buttons 
@@ -145,10 +163,6 @@ h3 {
 nav {
     height: 50px;
     padding: 15px;
-    -webkit-box-shadow: 0px 0px 5px 0px rgba(255,255,255,0.75);
-    -moz-box-shadow: 0px 0px 5px 0px rgba(255,255,255,0.75);
-    box-shadow: 0px 0px 5px 0px rgba(255,255,255,0.75);
-    background-color: rgba(69, 117, 189, .4);
     position: fixed;
     top: 0;
     width: 100%;
@@ -156,6 +170,31 @@ nav {
     img {
         width: 40px;
     }
+}
+
+.menu-item {
+    font-weight: 600;
+    color: #fff;
+    transition: all .3s;
+
+    &:hover {
+        color: $blue;
+        background-color: #fff;
+    }
+}
+
+.menu {
+    background-color: $primary;
+    color: #fff;
+}
+
+.local-info {
+    border-bottom: 2px solid $primary;
+}
+
+.username {
+    border-bottom: 2px solid #fff;
+    font-weight: 700;
 }
 
 /*  -----------------------------------------------
@@ -168,13 +207,42 @@ nav {
         height: 50px;
         padding: 15px 0;
         display: flex;
+        box-shadow: none;
+    }
+
+    h1 {
+        margin-top: 30px;
     }
     
     .login-form {
-        min-height: calc(100vh - 130px);
+        min-height: 100vh;
+        background-color: $primary;
         display: flex;
         align-items: center;
         justify-content: center;
         flex-wrap: wrap;
+    }
+}
+
+/*  -----------------------------------------------
+    DASHBOARD
+    ----------------------------------------------- */
+
+.dashboard {
+
+    .menu {
+        width: 30%;
+    }
+
+    .main-content {
+        width: 70%;
+    }
+
+    .local-info {
+        color: $blue;
+
+        h4 {
+            text-transform: uppercase;
+        }
     }
 }
